// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render a disabled input 1`] = `
<div
  class="wrapper isDisabled class-for-wrapper"
>
  <input
    class="input"
    disabled=""
    id="input-text-42"
    name="input-text-42"
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> should render a required input 1`] = `
<div
  class="wrapper class-for-wrapper"
>
  <input
    class="input"
    id="input-text-42"
    name="input-text-42"
    required=""
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> should render an enabled input 1`] = `
<div
  class="wrapper class-for-wrapper"
>
  <input
    class="input"
    id="input-text-42"
    name="input-text-42"
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> should render an input with error state 1`] = `
<div
  class="wrapper class-for-wrapper"
>
  <input
    class="input error"
    id="input-text-42"
    name="input-text-42"
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> should render with a custom className for the input 1`] = `
<div
  class="wrapper class-for-wrapper"
>
  <input
    class="input custom-class-for-input"
    id="input-text-42"
    name="input-text-42"
    type="text"
    value=""
  />
</div>
`;
